# com.thedevjade.sdfx

./: .gitattributes  .gitignore  LICENSE  README.md  package.json
Rasterizer/: AssemblyInfo.cs  Rasterizer.Editor.asmdef
Rasterizer/Compute/: RasterColorQuantAssign.compute  RasterEdgeDetect.compute  RasterEdgeMask.compute  RasterPreviewEdgeTint.compute  RasterSuperpixelAssign.compute  RasterThresholdMask.compute  RasterVoronoiNearest.compute
Rasterizer/Core/: NativeVtracer.cs  RasterContracts.cs  RasterSvgDocument.cs  RasterToSvg.cs
Rasterizer/Editor/: NativeDllConsent.cs  RasterAlgorithmUI.cs  RasterComputeWarmupInit.cs  RasterFlatExport.cs  RasterToSvgMenu.cs  RasterizerWindow.cs
Rasterizer/Native~/: .gitignore
Rasterizer/RasterizerSource~/: .gitignore  Cargo.toml  README.md  build-dll.ps1
Rasterizer/RasterizerSource~/src/: ffi.rs  lib.rs  main.rs
VectorTextureCompiler/: AssemblyInfo.cs  VectorTextureCompiler.Editor.asmdef
VectorTextureCompiler/Compute/: JumpFloodSdf.compute
VectorTextureCompiler/Core/: CompileReport.cs  CompiledVectorTextureAsset.cs
VectorTextureCompiler/Editor/: SVGImportPostprocessor.cs  SdfxBannerRenderer.cs  SdfxBlendStateSync.cs  SdfxCompilerActions.cs  SdfxEditorLabels.cs  SdfxEditorScroll.cs  SdfxEditorSearch.cs  SdfxMaterialInspectorUI.cs  SdfxMaterialPresetApplier.cs  SdfxMaterialPresetDefaults.cs  SdfxModulePickerWindow.cs  SdfxModulePropertyDrawer.cs  SdfxPackageInitializer.cs  SdfxPrimitiveMetricsProfiler.cs  SdfxShaderGUI.cs  SdfxShaderVariantCache.cs  SdfxShaderVariantStripper.cs  ShaderModuleRegistrar.cs  (+1 more)
(+288 files in other folders)
